kubernetes/apps/searxng/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`search.pxldi.de`)
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      services:
        - name: searxng
          port: 8080
